--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <div class="page-wrap">
             <div class="header" *ngIf="this.loginService.isLoggedIn">
                 <app-mobile-menu class="mob-nav"></app-mobile-menu>
-                <div class="title">{{ pageTitle }}</div>
+                <div class="title desktop-app-title">{{ pageTitle }}</div>
                 <app-search-bar></app-search-bar>
                 <app-user-tools style="margin-left: auto;"></app-user-tools>
             </div>
