--- a/src/app/employees/employee-home/employee-home.component.css
+++ b/src/app/employees/employee-home/employee-home.component.css
@@ -14,21 +14,11 @@
   display: none;
 }
 
-@media (max-width: 992px) {
-  /* .container {
-        display: flex;
-        flex-wrap: nowrap;
-        height: 300px;
-        overflow-x: auto;
-        width: auto;
-    } */
-  /* .container {
-    display: flex;
-    overflow-x: auto;
-    flex-wrap: unset;
-    align-items: unset;
-    flex-direction: unset;
-  } */
+#dashboard {
+  background-color: red;
+}
+
+@media (max-width: 812px) {
   .container-header {
     display: block;
   }
@@ -60,12 +50,7 @@
 
 .page-inner {
   padding: 0 15px 15px 15px;
-  /* display: flex;
-      flex-wrap: wrap;
-      flex: 1;
-      align-items: flex-start; */
 }
-
 
 /*
 Copyright Google LLC. All Rights Reserved.
