updating json data, adding analystics

--- a/src/app/employees/employee-detail/employee-detail.component.html
+++ b/src/app/employees/employee-detail/employee-detail.component.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="profile-line profile-line-style-p">
-                    <div class="profile-label">Coach</div>
+                    <div class="profile-label">{{ managerLabel }}</div>
                     <div class="profile-value profile-value-style-p">
                         <div>{{ employee.coach }}</div>
                     </div>
