--- a/src/app/employees/employee-detail/employee-detail.component.html
+++ b/src/app/employees/employee-detail/employee-detail.component.html
@@ -13,41 +13,47 @@
                 <div class="profile-line profile-line-style-p">
                     <div class="profile-label">Practice</div>
                     <div class="profile-value profile-value-style-p">
-                        <div>{{ employee.practicearea }}</div>
+                        <div>{{ employee.practicearea || '--' }}</div>
                     </div>
                 </div>
                 <div class="profile-line profile-line-style-p">
                     <div class="profile-label">Client</div>
                     <div class="profile-value profile-value-style-p">
-                        <div>{{ employee.client }}</div>
+                        <div>{{ employee.client || '--' }}</div>
                     </div>
                 </div>
                 <div class="profile-line profile-line-style-p">
                     <div class="profile-label">{{ managerLabel }}</div>
                     <div class="profile-value profile-value-style-p">
-                        <div>{{ employee.coach }}</div>
+                        <div>{{ employee.coach || '--' }}</div>
                     </div>
                 </div>
                 <div class="profile-line profile-line-style-p">
                     <div class="profile-label">Mobile</div><a href="tel:{{ employee.mobilephone }}"
-                        class="profile-value profile-value-style-p">{{ employee.mobilephone }}</a>
+                        class="profile-value profile-value-style-p">{{ employee.mobilephone || '--' }}</a>
                 </div>
                 <div class="profile-line profile-line-style-p">
                     <div class="profile-label">Email</div><a href="mailto:{{ employee.email }}"
-                        class="profile-value profile-value-style-p">{{ employee.email }}</a>
+                        class="profile-value profile-value-style-p">{{ employee.email || '--' }}</a>
                 </div>
             </div>
             <div class="profile-details">
+                <div class="profile-line profile-line-style-p" *ngIf="showChampion">
+                    <div class="profile-label">Champion a Cause</div>
+                    <div class="profile-value profile-value-style-p">
+                        <div>{{ employee.champion || '--' }}</div>
+                    </div>
+                </div>
                 <div class="profile-line profile-line-style-p">
                     <div class="profile-label">Birthday</div>
                     <div class="profile-value profile-value-style-p">
-                        <div>{{ employee.birthday | monthDayOnly }}</div>
+                        <div>{{ (employee.birthday | monthDayOnly) || '--' }}</div>
                     </div>
                 </div>
                 <div class="profile-line profile-line-style-p">
                     <div class="profile-label">Ingagaversary</div>
                     <div class="profile-value profile-value-style-p">
-                        <div>{{employee.anniversary | customDate }}</div>
+                        <div>{{ (employee.anniversary | customDate) || '--' }}</div>
                     </div>
                 </div>
             </div>
