--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -110,4 +110,9 @@ button:hover {
         width: 75%;
         min-height: unset;
     }
-  }
+}
+
+.loading {
+    color: white;
+    padding-top: 50px;
+}
