--- a/src/app/mobile-menu/mobile-menu.component.html
+++ b/src/app/mobile-menu/mobile-menu.component.html
@@ -1,6 +1,10 @@
 <div class="mobile-header">
-    <div>
-        <mat-icon (click)="toggleMobileMenu()">menu</mat-icon>
+    <div class="hamburger-search-wrap">
+        <div class="center">
+            <mat-icon (click)="toggleMobileMenu()">menu</mat-icon>
+        </div>
+        <!-- <span class="tempSearch">Temporary Search Bar</span> -->
+        <!-- <app-search-bar></app-search-bar> -->
     </div>
     <div class="slide-out-menu-wrap">
         <div class="slide-out-menu" *ngIf="showMobileMenu" [@slideInOut]>
