--- a/src/app/mobile-menu/mobile-menu.component.html
+++ b/src/app/mobile-menu/mobile-menu.component.html
@@ -1,11 +1,9 @@
 <div class="mobile-header">
-    <div class="hamburger-search-wrap">
+    <!-- <div class="hamburger-search-wrap"> -->
         <div class="center">
             <mat-icon (click)="toggleMobileMenu()">menu</mat-icon>
         </div>
-        <!-- <span class="tempSearch">Temporary Search Bar</span> -->
-        <!-- <app-search-bar></app-search-bar> -->
-    </div>
+    <!-- </div> -->
     <div class="slide-out-menu-wrap">
         <div class="slide-out-menu" *ngIf="showMobileMenu" [@slideInOut]>
             <div class="content">
