added sidebar link but working yet

--- a/src/app/sidebar/side-bar.component.html
+++ b/src/app/sidebar/side-bar.component.html
@@ -69,6 +69,10 @@
                     </li>
                 </ul>
             </li>
+            <li class="item-active">
+                <a [routerLink]="['/employees/all']" routerLinkActive="active-link">Add an employee</a>
+            </li>
+        
         </ul>
     </div>
 </div>
