--- a/src/app/employees/employee-detail/employee-detail.component.html
+++ b/src/app/employees/employee-detail/employee-detail.component.html
@@ -1,7 +1,7 @@
 <div class="profile-detail-content">
     <div class="profile-left">
         <div>
-            <button mat-fab>Edit</button>
+            <button mat-fab (click)="openForm()">Edit</button>
             <div class="profile-details">
                 <div class="profile-line profile-line-style-h2">
                     <div class="profile-value profile-value-style-h2">
