--- a/src/app/edit-button/edit-button.component.html
+++ b/src/app/edit-button/edit-button.component.html
@@ -1,28 +1,23 @@
-
-<button mat-fab (click)="openForm()">Edit</button>
+<button (click)="openForm()">Edit</button>
 <div [hidden]="!openForm">
-    <form [formGroup]="formdata2" 
-    (ngSubmit)="onClickSubmitForm(formdata2.value)">
+   <form [formGroup]="formdata2" (ngSubmit)="onClickSubmitForm(formdata2.value)">
       Name:
-      <input type="text" class="yourtextbox" name="yourname" 
-    placeholder="Your Name" formControlName="name">
+      <input type="text" class="yourtextbox" name="yourname" placeholder="Your Name" formControlName="name">
       <br> LastName:
-      <input type="text" class="yourtextbox" name="yourlastname" 
-   placeholder="Your Last Name" formControlName="lastname">
+      <input type="text" class="yourtextbox" name="yourlastname" placeholder="Your Last Name"
+         formControlName="lastname">
       <br> Age:
-      <input type="text" class="yourtextbox" name="yourage" 
-   placeholder="Your Age" formControlName="age">
+      <input type="text" class="yourtextbox" name="yourage" placeholder="Your Age" formControlName="age">
       <br> Email:
-      <input type="text" class="yourtextbox" name="youremail" 
-   placeholder="Your Email" formControlName="email">
+      <input type="text" class="yourtextbox" name="youremail" placeholder="Your Email" formControlName="email">
       <br> Mobile Number:
-      <input type="text" class="yourtextbox" name="yourmobile" 
-   placeholder="Your Mobile Number" formControlName="mobilenumber">
+      <input type="text" class="yourtextbox" name="yourmobile" placeholder="Your Mobile Number"
+         formControlName="mobilenumber">
       <br> Aadhaar Number:
-      <input type="text" class="yourtextbox" name="youraadhaar" 
-   placeholder="Your Aadhar Number" formControlName="aadhaarnumber">
+      <input type="text" class="yourtextbox" name="youraadhaar" placeholder="Your Aadhar Number"
+         formControlName="aadhaarnumber">
       <br>
-      <input type="submit" [disabled]="!formdata2.valid" type="button" 
-  class="btn btn-success" class="forsubmit" value="Submit">
-  </form>
+      <input type="submit" [disabled]="!formdata2.valid" type="button" class="btn btn-success" class="forsubmit"
+         value="Submit">
+   </form>
 </div>
