started to add get employee function for two way binding

--- a/src/app/employees/employee-detail/employee-detail.component.html
+++ b/src/app/employees/employee-detail/employee-detail.component.html
@@ -67,8 +67,13 @@
                         <div>{{ (employee.anniversary | customDate) || '--' }}</div>
                     </div>
                 </div>
-            </div>
+                </div>
+            
+                
         </div>
+        <div class="profile-line profile-line-style-p">
+        <add-employee></add-employee>
+    </div>    
     </div>
     <div class="profile-right">
         <div class="card-profile-image image-loaded">
@@ -86,5 +91,9 @@
                 <div class="hbdi-preference" [ngClass]="hbdiPreference"></div>
             </div>
         </div>
+
     </div>
+    
 </div>
+
+    
