--- a/src/app/edit-button/edit-button.component.html
+++ b/src/app/edit-button/edit-button.component.html
@@ -1,17 +1,23 @@
 <div>
-   <form [formGroup]="formdata2" (ngSubmit)="onClickSubmitForm(formdata2.value)">
-      Name:
-      <input type="text" class="yourtextbox" name="yourname" placeholder="Your Name" formControlName="firstname">
-      <br> LastName:
-      <input type="text" class="yourtextbox" name="yourlastname" placeholder="Your Last Name"
-         formControlName="lastname">
-      <br> Email:
-      <input type="text" class="yourtextbox" name="youremail" placeholder="Your Email" formControlName="email">
-      <br> Mobile Number:
-      <input type="text" class="yourtextbox" name="yourmobile" placeholder="Your Mobile Number"
-         formControlName="mobilenumber">
-      <br>
-      <input type="submit" [disabled]="!formdata2.valid" type="button" class="btn btn-success" class="forsubmit"
-         value="Submit">
-   </form>
+    <form [formGroup]="formdata2" (ngSubmit)="onClickSubmitForm(formdata2.value)">
+        First Name:
+        <input type="text" class="yourtextbox" name="yourname" placeholder="Your First Name" formControlName="firstname">
+        <br> Last Name:
+        <input type="text" class="yourtextbox" name="yourlastname" placeholder="Your Last Name"
+            formControlName="lastname">
+        <br> Email:
+        <input type="text" class="yourtextbox" name="youremail" placeholder="Your Email" formControlName="email">
+        <br> Mobile Number:
+        <input type="text" class="yourtextbox" name="yourmobile" placeholder="Your Mobile Number"
+            formControlName="mobilenumber">
+        <br> Practice:
+        <input type="text" class="yourtextbox" name="yourpractice" placeholder="Your Practice" formControlName="practicetext">
+        <br> Client:
+        <input type="text" class="yourtextbox" name="yourclient" placeholder="Your Client" formControlName="clientname">
+        <br> Mentor:
+        <input type="text" class="yourtextbox" name="yourmentor" placeholder="Your Mentor" formControlName="mentorname">
+        <br>
+        <input type="submit" [disabled]="!formdata2.valid" type="button" class="btn btn-success" class="forsubmit"
+            value="Submit">
+    </form>
 </div>
