--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -48,12 +48,12 @@
       </div>
       <div class="form-group">
         <label for="birthday">Birthday</label>
-        <input type="date" class="form-control" id="birthday"
+        <input type="text" class="form-control" id="birthday"
         [(ngModel)]="employee.birthday" name="birthday">
       </div>
       <div class="form-group">
         <label for="anniversary">Ingagaversary</label>
-        <input type="date" class="form-control" id="anniversary"
+        <input type="text" class="form-control" id="anniversary"
         [(ngModel)]="employee.anniversary" name="anniversary">
       </div>
 
