--- a/src/app/sidebar/side-bar.component.html
+++ b/src/app/sidebar/side-bar.component.html
@@ -70,7 +70,7 @@
                 </ul>
             </li>
             <li class="item-active">
-                <a [routerLink]="['/employees/all']" routerLinkActive="active-link">Add an employee</a>
+                <a [routerLink]="['/addemployee']" routerLinkActive="active-link">Add an employee</a>
             </li>
         
         </ul>
