--- a/src/app/edit-employee/edit-employee.component.html
+++ b/src/app/edit-employee/edit-employee.component.html
@@ -1,10 +1,13 @@
 <div class="container">
     <h1>Edit Employee Form</h1>  
-    <form>
+    <form [formGroup]="profileForm" (ngSubmit)="submitForm()">
       <div class="form-group">
-        <label for="firstname">First name</label>
-        <input type="text" class="form-control" id="firstname" required
-        [(ngModel)]="employee.firstname" name="firstname">
+        <label>
+            First name
+            <input type="text" class="form-control" id="firstname" 
+            formControlName="firstname">
+        </label>
+       
       </div>   <!--
       <div class="form-group">
         <label for="lastname">Last name</label>
@@ -86,8 +89,10 @@
       <label for="hbdi-yellow">HBDI yellow</label>
       <input type="number" class="form-control" id="hbdiyellow" [(ngModel)]="employee.hbdiyellow" name="hbdiyellow">
     </div>
+
+type="text"  (click)="submitForm()"
     -->
-    <button type="text" (click)="submitForm()" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success">Submit</button>
 
   </form>
 
