html css and search pipe started

--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -1,10 +1,12 @@
-<p>Champion a Cause</p>
-<!-- search bar -->
+<h3>Champion a Cause</h3>
+</br>
 <p>Champion a Cause is an Ingage giving program that encourages employees to be ambassadors of a non profit organization
     of their choice.</p>
+</br>
 <div class="championTable">
+    <input ng-model="searchText" placeholder="enter search term here">
     <ul>
-        <li *ngFor="let champion of Champions" class="championCausePair">
+        <li *ngFor="let champion of Champions | filter : searchText" class="championCausePair">
             <div class="champion">{{ employee.firstname }} {{ employee.lastname}}</div>
             <div class="cause">{{employee.champion}}</div>
         </li>
