--- a/src/app/edit-employee/edit-employee.component.html
+++ b/src/app/edit-employee/edit-employee.component.html
@@ -6,13 +6,28 @@
           First name: 
             <input type="text" formControlName="firstname" class="form-control">
         </label>
-       
-      </div>   <!--
-      <div class="form-group">
-        <label for="lastname">Last name</label>
-        <input type="text" class="form-control" id="lastname" required
-        [(ngModel)]="employee.lastname" name="lastname">
+      
+        <div>
+        <label>
+          Last name: 
+            <input type="text" formControlName="lastname" class="form-control">
+        </label>
       </div>
+     
+
+      </div>
+
+      <!--
+      <div>
+        <label>
+          Title: 
+            <input type="text" formControlName="title" class="form-control">
+        </label>
+      </div>
+        
+
+
+
       <div class="form-group">
         <label for="title">Title</label>
         <input type="text" class="form-control" id="title" required
