--- a/src/app/champion-a-cause/champion-a-cause.component.css
+++ b/src/app/champion-a-cause/champion-a-cause.component.css
@@ -1,59 +1,62 @@
-:host .flexWrapper {
-    display: flex;
-  flex-direction: row;
-  align-items: flex-start;
+/* start tony experiment */
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: #f5f5f5;
+  margin: 0 auto; 
+  max-width: 60em;
+  line-height: 1.3;
+}
+ul, li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+img {
+  width: 100%;
+}
+h2 {
+  margin-top: 0;
+  margin-bottom: 0.4em;
+}
+/*Flex items*/
+.list {
+  display: flex;
   flex-wrap: wrap;
-  width: 100%; 
 }
-
-
-.championCausePair {
-    padding: 10px;
-	margin-left: 10px;
-	margin-top: 10px;
-    flex: 1 0 300px;
-    border: solid 1px grey;
-  
+.list-item {
+	display: flex; 
+  padding: 0.5em;
+  width: 100%;
+  background-color: #056cb6;
+  background-color: rgba(5, 108, 182, 0.3);
+  margin: 5px;
 }
-
-.championCausePair:hover {
-background-color: dodgerblue;
+@media all and (min-width: 40em) {
+  .list-item {
+    width: 50%;
+  }
 }
-
-@media (min-width: 410px) {
-    .flexWrapper .championCausePair {
-      max-width: calc(50% - 10px);
-    }
+@media all and (min-width: 60em) {
+  .list-item {
+    width: 33.33%;
+    width: calc(14.28571% - 10px);
+    width: calc(20% - 10px);
   }
-  @media (min-width: 620px) {
-    .flexWrapper .championCausePair {
-      max-width: calc(33.33333% - 10px);
-    }
-  }
-  @media (min-width: 830px) {
-    .flexWrapper .championCausePair {
-      max-width: calc(25% - 10px);
-    }
-  }
-  @media (min-width: 1040px) {
-    .flexWrapper .championCausePair {
-      max-width: calc(20% - 10px);
-    }
-  }
-  @media (min-width: 1250px) {
-    .flexWrapper .championCausePair {
-      max-width: calc(16.66667% - 10px);
-    }
-  }
-  @media (min-width: 1460px) {
-    .flexWrapper .championCausePair {
-      max-width: calc(14.28571% - 10px);
-    }
-  }
-  @media (min-width: 1670px) {
-    .flexWrapper .championCausePair {
-      min-width: calc(12.5% - 10px);
-    }
-  }
-
+}
+.list-content {
+	background-color: #fff;
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+	width: 100%;
+}
+.list-content p {
+	flex: 1 0 auto;
+}
+.list-title {
+  font-size: 18px;
+  font-weight: 800;
+}
 
