--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -1,11 +1,12 @@
 <p>Champion a Cause is an Ingage giving program that encourages employees to be ambassadors of a non profit organization
     of their choice.</p>
 <br />
-
-    <input [(ngModel)]="searchText" placeholder="find a cause">
-    <div class="flexWrapper">
-        <div *ngFor="let champion of employees" class="championCausePair">
-            <div class="championName">{{champion.firstname}} {{champion.lastname}} </div>
-            <div class="championCause"> {{champion.champion}} </div>
+<input [(ngModel)]="searchText" placeholder="find a cause">
+<ul class="list">
+    <li class="list-item" *ngFor="let champion of employees">
+        <div class="list-content">
+            <div class="list-title">{{champion.firstname}} {{champion.lastname}}</div>
+            <p>{{champion.champion}}</p>
         </div>
-    </div>
+    </li>
+</ul>
