--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -1,14 +1,9 @@
 <p>Champion a Cause is an Ingage giving program that encourages employees to be ambassadors of a non profit organization
     of their choice.</p>
 <br />
-<!-- <input [(ngModel)]="searchText" placeholder="find a cause"> -->
-<div class="search-bar" *ngIf="showSearchBar">
-    <input type="text" [ngModel]="searchText" #box (keyup)="onKey(box.value)" id="search-bar" placeholder="Find a cause" value="" style="border-color: rgb(16, 16, 16);">
-    <button type="button" id="mobile-cancel" (click)="clearSearchField()">CANCEL</button><button id="searchChamp">Search Champions</button><button id="searchCause">Search Causes</button>
-</div>
 
 <ul class="list">
-    <li class="list-item" *ngFor="let champion of employees">
+    <li class="list-item" *ngFor="let champion of employees | searchEmployees:'firstname,lastname,champion':searchText">
         <div class="list-content">
             <div class="list-title">{{champion.firstname}} {{champion.lastname}}</div>
             <p>{{champion.champion}}</p>
