--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -1,6 +1,11 @@
 <p>Champion a Cause is an Ingage giving program that encourages employees to be ambassadors of a non profit organization
     of their choice.</p>
 <br />
+<select class="championSelect" >
+    <option ng-model="selected" ng-options="f.champion for f in employees | orderObjectBy:'champion'">sort by cause</option>
+    <option ng-model="selected" ng-options="f.firstname for f in employees | orderObjectBy:'firstname'">sort by name</option>
+</select>
+
 
 <ul class="list">
     <li class="list-item" *ngFor="let champion of employees | searchEmployees:'firstname,lastname,champion,title':searchText">
