--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -2,7 +2,7 @@
     of their choice.</p>
 <br />
 <label>Sort By </label>
-<select class="championSelect" change="filterChampion($event.target.value)">
+<select class="championSelect" (change)="filterChampion($event.target.value)">
     <option value={{champion}}>Cause</option>
     <option value={{firstname}}>Name</option>
 </select>
@@ -11,8 +11,9 @@
 <ul class="list">
     <li class="list-item" *ngFor="let champion of employees | searchEmployees:'firstname,lastname,champion,title':searchText">
         <div class="list-content">
-            <div class="list-title">{{champion.firstname}} {{champion.lastname}}</div>
-            <p>{{champion.champion}}</p>
+            <div class="list-title">{{champion.champion}}</div>
+            <div >{{champion.firstname}} {{champion.lastname}}</div>
+            
         </div>
     </li>
 </ul>
