full dropdown sort

--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -3,8 +3,8 @@
 <br />
 <label>Sort By </label>
 <select class="championSelect" (change)="filterChampion($event.target.value)">
-    <option value={{champion}}>Cause</option>
-    <option value={{firstname}}>Name</option>
+    <option value='cause'>Cause</option>
+    <option value='name'>Name</option>
 </select>
 
 
