href link attempt

--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -11,9 +11,13 @@
 <ul class="list">
     <li class="list-item"
         *ngFor="let champion of employees | searchEmployees:'firstname,lastname,champion,title':searchText">
+
         <div class="list-content">
+            
             <div class="list-title">{{champion.champion}}</div>
+            <a [routerLink]="['/employee', employee.employeeid]"> 
             <div>{{champion.firstname}} {{champion.lastname}}</div>
+            </a>
         </div>
     </li>
 </ul>
