--- a/src/app/champion-a-cause/champion-a-cause.component.html
+++ b/src/app/champion-a-cause/champion-a-cause.component.html
@@ -12,7 +12,7 @@
         *ngFor="let champion of employees | searchEmployees:'firstname,lastname,champion,title':searchText">
         <div class="list-content">
             <div class="list-title">{{champion.champion}}</div>
-            <a [routerLink]="['/employee', employee.employeeid]"> 
+            <a [routerLink]="['/employee', champion.employeeid]"> 
             <div >{{champion.firstname}} {{champion.lastname}}</div>
             </a>
         </div>
